# Downloader

./: CMakeLists.txt  README.md
src/: DarkNotifyDialog.cpp  DarkNotifyDialog.h  DownloadItem.cpp  DownloadItem.h  DownloadsModel.cpp  DownloadsModel.h  MainWindow.cpp  MainWindow.h  NavButton.cpp  NavButton.h  Theme.cpp  Theme.h  TitleBar.cpp  TitleBar.h  TitleButton.cpp  TitleButton.h  YtDlpClient.cpp  YtDlpClient.h  main.cpp
src/pages/: AboutPage.cpp  AboutPage.h  NewDownloadPage.cpp  NewDownloadPage.h  QueuePage.cpp  QueuePage.h  SettingsPage.cpp  SettingsPage.h
